# poten_up09

./: .gitignore  best.pth  crawling.ipynb  day01_yolo_exercise.ipynb  day02_ocr_exercise.ipynb  day02_seg-exercise.ipynb  day02_video_opencv.py  day03_youtube_opencv.py  day04_mediapipe_face.py  day04_mediapipe_hands.py  day04_mediapipe_hands02.py  day04_mediapipe_hands03.py  day04_mediapipe_pose.py  day05_mediapipe_collect_data.py  day05_mediapipe_collect_data02.py  day05_mediapipe_collect_data03.py  day05_mediapipe_pred.py  day05_mediapipe_train.ipynb  day07_lstm.ipynb  day08_llm_exercies.ipynb.ipynb  day08_llm_exericse.ipynb  day09_stt_tts.ipynb  day10_ollama.ipynb  day11_huggingface_models.ipynb  day12_huggingface_finetuning.ipynb  lstm.pth  main.py  mini_gwajea.ipynb  pyproject.toml  rock_scissors_paper.pkl  test.ipynb  test.json  yolo_exercise.ipynb  youtube_yolo.py
MyProject-2/: README.dataset.txt  README.roboflow.txt  data.yaml
MyProject-2/test/labels/: -19-_jpeg.rf.ea848964694616aa7778f11e18a8d2fa.txt  -5-_jpeg.rf.f119befc183885116d40980ce5bea853.txt
MyProject-2/train/labels/: -13-_jpeg.rf.3c09b9323e05fecb3edbdb64a8e0c055.txt  -14-_jpeg.rf.b1d9c4b0b328c113223785380ffd3d8e.txt  -15-_jpeg.rf.2209726e881a7a40e1ec83371cde926d.txt  -16-_jpeg.rf.2d8ac4a74a6bb02a658e49b427f21418.txt  -17-_jpeg.rf.ad449c43e30bf16ceb46d32d48674335.txt  -2-_jpeg.rf.7c5abc47c764d998f2f0ccbda1293f42.txt  -22-_jpeg.rf.4cc36bd4d76ea173472ec0c9f231a427.txt  -28-_jpeg.rf.90c90aed7e978eec529c61d1a0913888.txt  -31-_jpeg.rf.6bede91e167e561a486cc03621bb1377.txt  -6-_jpeg.rf.088b4761e9b61e9df3a255bb2d407b1b.txt  -7-_jpeg.rf.790a747c7b8be6d8ee0ba50ad55b26be.txt  -9-_jpeg.rf.74d025a6e77e1bf719dc289e4d9eabb2.txt
MyProject-2/valid/labels/: -10-_jpeg.rf.178393a9525d4f2953da84a62310ba16.txt  (+1 more)
home_work/: day01_work.ipynb  die_yujeong.py  fast_api_work.py  mcp-client.py  mcp_server.py  naver_mcp.ipynb
yolo_my_project/: README.dataset.txt  README.roboflow.txt  data.yaml
yolo_my_project/train/: labels.cache
yolo_my_project/valid/: labels.cache
(+20 files in other folders)
