[project]
name = "poten-up09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "mcp>=1.13.1",
    "mcp-naver>=0.1.5",
    "mcp-server>=0.1.4",
    "mediapipe>=0.10.14",
    "numpy>=2.3.2",
    "openai>=1.107.0",
    "opencv-python>=4.11.0.86",
    "paddleocr>=3.2.0",
    "paddlepaddle>=3.1.1",
    "pandas>=2.3.2",
    "pipwin>=0.5.2",
    "prophet>=1.1.7",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "roboflow>=1.2.7",
    "selenium>=4.35.0",
    "speechrecognition>=3.14.3",
    "torch>=2.8.0",
    "translate>=3.6.1",
    "ultralytics>=8.3.191",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
    "yt-dlp>=2025.8.27",
]
